upload images and nicer colors, fixed some spacing

--- a/03 Portfolio/portfolio/css/small.css
+++ b/03 Portfolio/portfolio/css/small.css
@@ -6,12 +6,19 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 
 :root{
     scroll-behavior: smooth;
+    --colorOne: #ad6df3;
+    --colorTwo: #F6E27F;
+    --colorThree: #FF6666;
+    --colorFour: #80FFE8;
+    --textColor: #311E10;
 }
 
 nav{
     position: sticky;
     top: 0;
-    background-color: green;
+    background-color: var(--colorThree);
+    padding: 12px;
+    font-size: 1.2rem;
 }
 
 nav ul{
@@ -25,30 +32,30 @@ nav a{
     padding: .7rem .5rem;
     display: block;
     text-decoration: none;
-    color: blue;
+    color: var(--textColor);
     font-weight: var(--boldText);
 }
 
 nav a:hover{
-    background-color: purple;
-    color: pink;
+    background-color: var(--colorTwo);
+    color: var(--colorThree);
 }
 
 body {
     font-family: "Red Hat Display", sans-serif;
     --regularText: 300;
     --boldText: 700;
-    --mainColor: #088cff;
 }
 
 section#about{
-    background-color: var(--mainColor);
+    background-color: var(--colorFour);
     height: 100vh;
     padding: 50px;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    color: var(--textColor);
 }
 
 section#about h1{
@@ -56,17 +63,20 @@ section#about h1{
 }
 
 section#about h2{
-    font-size: 2.2rem;
+    font-size: 1.8rem;
+    font-style: italic;
 }
 
 section#projects{
-    background-color: orange;
+    background-color: var(--colorOne);
     min-height: 100vh;
     padding: 50px;
+    color: var(--textColor);
 }
 
 section#projects h2{
     text-align: center;
+    font-size: 2.8rem;
 }
 
 section#projects figure{
@@ -77,20 +87,20 @@ section#projects figure{
 section#projects img{
     width: 100%;
 }
-/**make projects look nice later**/
-div.myProject{
+
+div.myProjects{
     display: flex;
     flex-wrap: wrap;
 }
 
-div.myProject a{
+div.myProjects a{
     flex-basis: 100%;
     padding: 1rem 2vh;
 }
 
 section#contact{
-    background-color: yellow;
-    height: 100vh;
+    background-color: var(--colorTwo);
+    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -98,7 +108,7 @@ section#contact{
 
 section#contact h2{
     text-align: center;
-    color: red;
+    color: var(--textColor);
 }
 
 section#contact ul{
@@ -131,7 +141,8 @@ section#contact a:hover{
 }
 
 footer{
-    background-color: brown;
+    background-color: var(--textColor);
+    height: 20vh;
     font-size: 2rem;
     text-align: center;
     color: white;
